# squadron

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  README.md.bak  WATCHDOG_FAILURE_FIX.md  WATCHDOG_TIMEOUT_FIX.md  pyproject.toml  reconciliation_enhancement.patch  timeout_analysis.md  watchdog_investigation.md
.squadron/: agent-collaboration-guide.md  config-watchdog-enhancement.yaml  config.yaml  config.yaml.backup  config.yaml.bak
deploy/: README.md  github-app-setup.md
docs/: ACTION-PLAN.md  DESIGN-REVIEW-PLAN.md  GAP_ANALYSIS.md  IMPLEMENTATION-PLAN.md  agent-collaboration.md  agents.md  architecture.md  configuration.md  getting-started.md  index.md  observability.md  testing-strategy.md  troubleshooting.md
examples/: README.md
infra/: DEPLOYMENT.md  agent-pr-communication-patch.md  main.bicep  pr-communication-guidelines.md  pr-review-timeout-fix.yaml  sandbox-deployment.md  watchdog-failure-monitoring.md  watchdog-monitoring-enhancement.py
scripts/: watchdog_diagnostics.py
tests/: test_activity_logging.py  test_agent_timeout_fix.py  test_approval_flow.py  test_architecture.py  test_bug_39_wake_missing_worktree.py  test_bug_fix_bash_fallback.py  test_bugfix_regressions.py  test_cli_pipelines.py  test_command_parser.py  test_comprehensive_github_tools.py  test_config.py  test_copilot.py  test_copilot_timeout_fix.py  test_dashboard_auth.py  test_dashboard_pipelines.py  test_dashboard_stream_hydration.py  test_enhanced_watchdog_fix.py  test_env_isolation.py  test_event_router.py  test_github_client.py  (+48 more)
(+128 files in other folders)
